<resources>
    <string name="app_name">Workout Timers</string>
    <string name="finish_session_button">Finish Session</string>
    <string name="start_session_button">Start New Session</string>
    <string name="pause_resume_pause_button">Pause</string>
    <string name="pause_resume_resume_button">Resume</string>
    <string name="restart_session_button">Restart Session</string>
    <string name="add_workout_timer_button">Add Workout</string>
    <string name="cancel_add_workout_button">Cancel</string>
    <string name="start_workout_button">Start</string>
    <string name="pause_workout_button">Pause</string>
    <string name="resume_workout_button">Resume</string>
    <string name="count_every_label">Count Every:</string>
    <string name="count_every_hint">time in seconds</string>
    <string name="new_workout_session_button">New Workout Session</string>
    <string name="count_on_elapsed_time_timer_button">Count on Elapsed Time Timer</string>
    <string name="view_workout_sessions_button">View Workout Sessions</string>
    <string name="count_every_value_default">60</string>
    <string name="set_counter_label">Count</string>
    <string name="finger_board_timer_button">Fingerboard Timer</string>
    <string name="hang_time_label">Hang Time</string>
    <string name="reps_rest_time_label">Rest Time</string>
    <string name="number_of_reps_label">Number of Reps</string>
    <string name="sets_rest_time">Rest Time between Sets</string>
    <string name="number_of_sets_label">Number of Sets</string>
</resources>
