<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CountXTimerSetupActivity">

    <Button
            android:text="@string/start_workout_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/start_workout_button" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="621dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="62dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/count_every_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_every_label" android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="189dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="493dp"
            android:layout_marginEnd="105dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="106dp"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/count_every_value" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="301dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="385dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="106dp" android:layout_marginEnd="105dp"
            app:layout_constraintEnd_toEndOf="parent" android:autofillHints="@string/count_every_hint"/>
</android.support.constraint.ConstraintLayout>