<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FingerboardTimerSetupActivity">

    <TextView
            android:text="@string/hang_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hang_time_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/hang_time_text_view" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"/>

    <TextView
            android:text="@string/reps_rest_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reps_rest_time_label"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/reps_rest_time_text_view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="132dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/number_of_reps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_reps_label" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="188dp" app:layout_constraintHorizontal_bias="0.503"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/rest_time_text_view" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="220dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"/>
    <TextView
            android:text="@string/sets_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sets_rest_time_text_view" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="276dp" app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/rest_time_between_sets_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="308dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/number_of_sets_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_of_sets_label" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.51" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="364dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/number_of_sets_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="396dp" android:textSize="18sp"/>
    <Button
            android:text="@string/start_workout_button"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/start_workout_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>

</android.support.constraint.ConstraintLayout>